force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__TrackingPlanSharedWithCustomer__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TrackingPlanSharedWithCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tracking Plan Shared With Customer</label>
    <type>Checkbox</type>
</CustomField>