force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__UsageFormat__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageFormat__c</fullName>
    <description>The format in which usage should be captured</description>
    <label>Z_Obsolete - Usage Actual Format</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>