force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__UsageRevenueCap__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageRevenueCap__c</fullName>
    <label>Usage Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>