force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__UsageTrackingModel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageTrackingModel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage Tracking Model</label>
    <referenceTo>KimbleOne__UsageTrackingModel__c</referenceTo>
    <relationshipLabel>Resourced Activities</relationshipLabel>
    <relationshipName>ResourcedActivities</relationshipName>
    <type>Lookup</type>
</CustomField>