force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__UsageUnitType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageUnitType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usage Units</label>
    <referenceTo>KimbleOne__UnitType__c</referenceTo>
    <relationshipLabel>Resourced Activities</relationshipLabel>
    <relationshipName>ResourcedActivitiesUsageCapture</relationshipName>
    <type>Lookup</type>
</CustomField>