force-app/main/default/objects/KimbleOne__ResourcedActivity__c/fields/KimbleOne__UtilisationAnalysisGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UtilisationAnalysisGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilisation Analysis Group</label>
    <referenceTo>KimbleOne__AnalysisGroup__c</referenceTo>
    <relationshipLabel>Resourced Activities</relationshipLabel>
    <relationshipName>ResourcedActivities</relationshipName>
    <type>Lookup</type>
</CustomField>