force-app/main/default/objects/KimbleOne__ResourcedActivity__c/validationRules/KimbleOne__UsageUnitTypeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__UsageUnitTypeMandatory</fullName>
    <active>false</active>
    <description>UsageUnitType Is Mandatory</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>KimbleOne__UsageUnitType__c</errorDisplayField>
    <errorMessage>ERR_USAGE_UNIT_TYPE_IS_MANDATORY</errorMessage>
</ValidationRule>