force-app/main/default/objects/KimbleOne__ResourcedActivity__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__DeliveryElement__c</columns>
    <columns>KimbleOne__ResourcedActivityType__c</columns>
    <columns>KimbleOne__DeliveryGroup__c</columns>
    <columns>KimbleOne__RevenueBehaviourRule__c</columns>
    <columns>KimbleOne__CostBehaviourRule__c</columns>
    <columns>KimbleOne__PlanType__c</columns>
    <columns>KimbleOne__Proposal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>